unpick lombok builder