@@ -1,7 +1,9 @@
 package dev.aisandbox.server.engine.widget;
 
+import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.Setter;
 import org.apache.commons.statistics.descriptive.DoubleStatistics;
 import org.apache.commons.statistics.descriptive.Statistic;
 
@@ -13,8 +15,12 @@ import java.util.List;
 public class ScoreStatistics {
 
     private final int dataWindow;
-    private List<Double> scores = new ArrayList<>();
+    @Getter(AccessLevel.PROTECTED)
+    private final List<Double> scores = new ArrayList<>();
+    private final List<ResetableWidget> widgets = new ArrayList<>();
     private int startIndex = 1;
+    @Setter(AccessLevel.PROTECTED)
+    private TextWidget summaryWidget = null;
 
     @Getter
     private double currentMean = 0.0;
@@ -24,20 +30,47 @@ public class ScoreStatistics {
     private double currentMax = 0.0;
     @Getter
     private double currentVar = 0.0;
+    @Getter
+    private double currentStdDev = 0.0;
 
     public void addScore(double score) {
         // update score list
-       scores.add(score);
+        scores.add(score);
         while (scores.size() > dataWindow) {
-            scores.remove(0);
+            scores.removeFirst();
             startIndex++;
         }
         // recalculate the statistics
-        DoubleStatistics stats = DoubleStatistics.of(EnumSet.of(Statistic.MIN,Statistic.MAX,Statistic.MEAN,Statistic.VARIANCE),scores.stream().mapToDouble(d->d).toArray());
-        currentMin=stats.getAsDouble(Statistic.MIN);
-        currentMax=stats.getAsDouble(Statistic.MAX);
-        currentVar=stats.getAsDouble(Statistic.VARIANCE);
-        currentMean=stats.getAsDouble(Statistic.MEAN);
+        DoubleStatistics stats = DoubleStatistics.of(
+                EnumSet.of(
+                        Statistic.MIN,
+                        Statistic.MAX,
+                        Statistic.MEAN,
+                        Statistic.VARIANCE,
+                        Statistic.STANDARD_DEVIATION),
+                scores.stream().mapToDouble(d -> d).toArray());
+        currentMin = stats.getAsDouble(Statistic.MIN);
+        currentMax = stats.getAsDouble(Statistic.MAX);
+        currentVar = stats.getAsDouble(Statistic.VARIANCE);
+        currentMean = stats.getAsDouble(Statistic.MEAN);
+        currentStdDev = stats.getAsDouble(Statistic.STANDARD_DEVIATION);
+        // reset any widgets
+        widgets.forEach(ResetableWidget::reset);
+        // write summary
+        if (summaryWidget != null) {
+            summaryWidget.reset();
+            summaryWidget.addText("Mean: " + String.format("%.4f",currentMean));
+            summaryWidget.addText("Min: " + String.format("%.4f",currentMin));
+            summaryWidget.addText("Max: " + String.format("%.4f",currentMax));
+            summaryWidget.addText("Var: " + String.format("%.4f",currentVar));
+            summaryWidget.addText("StdDev: " + String.format("%.4f",currentStdDev));
+        }
     }
+
+    public TextWidget.TextWidgetBuilder createSummaryWidgetBuilder() {
+        return TextWidget.builder().statistics(this);
+    }
+
+
 
 }
